# geoanalytics-containers

./: .env-template  .gitignore  CHANGELOG.md  LICENSE  README.md  Taskfile.yaml  environment-condalock.yaml  ga-export.sh  generate-pkg-file.py
base/: dockerfile
dask-backend/: README.md  dockerfile
eo/: .dockerignore  apt.txt  dockerfile  environment.yaml  environment.yml  jupyter_notebook_config.py  packages.txt  pangeo-dockerfile  pangeo-env.yaml  requirements.txt  start
eo-poetry/: dockerfile  install_R_pkgs.R  pyproject.toml  r-pkgs.csv
experimental/: apt.txt  dask-lab-ext-config.yaml  dockerfile  packages.txt  requirements.txt
extensions/r-base/: dockerfile  install_R_base.R  install_R_pkgs.R  installed_previously.csv  r-pkgs.csv
