[tool.poetry]
name = "eo-poetry"
version = "0.1.0"
description = "GEOAnalytics EO environment via Poetry"
authors = ["bnjam <bsmith@hatfieldgroup.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "eo_poetry"}]

[tool.poetry.dependencies]
python = "^3.10"
jupyterhub = "^4.0.2"
dask = "^2023.8.1"
distributed = "^2023.8.1"
dask-ml = "^2023.3.24"
dask-gateway = "^2023.1.1"
setuptools = "^68.1.2"
llvmlite = "^0.40.1"
numpy = "1.24.4"
jupyter-lsp = "^2.2.0"
jupyter-panel-proxy = "^0.1.0"
jupyter-server-proxy = "^4.0.0"
jupyter-resource-usage = "^1.0.0"
ipython = "^8.14.0"
ipywidgets = "^8.1.0"
planetary-computer = "^1.0.0"
black = "^23.7.0"
awscli = "^1.29.30"
boto3 = "^1.28.30"
h5netcdf = "^1.2.0"
h5py = "^3.9.0"
netcdf4 = "^1.6.4"
panel = "^1.2.1"
param = "^1.13.0"
pystac = "^1.8.3"
pystac-client = "^0.7.2"
gdal = "^3.7.1.1"
rasterio = "^1.3.8"
xarray = "^2023.8.0"
rioxarray = "^0.15.0"
odc-stac = "^0.3.6"
stackstac = "^0.4.4"
shapely = "^2.0.1"
pandas = "^2.0.3"
geopandas = "^0.13.2"
psycopg2 = "^2.9.7"
sqlalchemy = "^2.0.20"
odc-algo = "^0.2.3"
graphviz = "^0.20.1"
plotly = "^5.16.1"
scikit-learn = "^1.3.0"
seaborn = "^0.12.2"
pyarrow = "^12.0.1"
fsspec = "^2023.6.0"
cartopy = "^0.22.0"
descartes = "^1.1.0"
bottleneck = "^1.3.7"
eofs = "^1.4.0"
geocube = "^0.4.2"
holoviews = "^1.17.1"
geoviews = "^1.10.1"
gcm-filters = "^0.3.0"
ipytree = "^0.2.2"
ipympl = "^0.9.3"
isort = "^5.12.0"
kerchunk = "^0.1.2"
jupyterlab-code-formatter = "^2.2.1"
jupyterlab-execute-time = "^3.0.1"
ipykernel = "^6.25.1"
jupyterlab-iframe = "^0.5.0"
jupyterlab-templates = "^0.5.0"
jupyterlab-geojson = "^3.4.0"
jupyterlab-git = "^0.42.0"
nbconvert = "^7.7.4"
lxml = "^4.9.3"
lz4 = "^4.3.2"
matplotlib = "^3.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
